--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -6,8 +6,8 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Join Today</legend>
-                {{ form }}
+                <legend class="border-bottom mb-4">Create a FeedMe Account</legend>
+                {{ form.as_p }}
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">Sign Up</button>
