--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -30,12 +30,20 @@
                 <div class="collapse navbar-collapse" id="navbarToggle">
                     <div class="navbar-nav mr-auto">
                         <a class="nav-item nav-link" href="{% url 'home' %}">Home</a>
+                        {% if user.is_authenticated %}
+                            <a class="nav-item nav-link" href="#">Feeds</a>
+                        {% endif %}
                         <a class="nav-item nav-link" href="{% url 'about' %}">About</a>
                     </div>
                     <!-- Navbar Right Side -->
                     <div class="navbar-nav">
-                        <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
-                        <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+                        {% if user.is_authenticated %}
+                            <a class="nav-item nav-link" href="#">Profile</a>
+                            <a class="nav-item nav-link" href="{% url 'logout' %}">Log Out</a>
+                        {% else %}
+                            <a class="nav-item nav-link" href="{% url 'login' %}">Log In</a>
+                            <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+                        {% endif %}
                     </div>
                 </div>
             </div>
