--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -7,11 +7,11 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Login to your FeedMe account</legend>
+                <legend class="border-bottom mb-4">Log In to your FeedMe account</legend>
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Login</button>
+                <button class="btn btn-outline-info" type="submit">Log In</button>
             </div>
         </form>
         <div class="border-top pt-2">
