--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -16,7 +16,7 @@
         </form>
         <div class="border-top pt-2">
             <small class="text-muted">
-                Already have an account? <a class="ml-2" href="{% url 'login' %}">Login</a>
+                Already have an account? <a class="ml-2" href="{% url 'login' %}">Log In</a>
             </small>
         </div>
     </div>
