Implement favourite feature
Authenticated users can click the heart button to add a feed to their favourites or remove it.

	new file:   db.sqlite
	new file:   rss.db

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -8,10 +8,29 @@
         <article class="media content-section">
             <div class="media-body">
                 <div class="article-metadata">
-                    <a class="mr-2" href="#">{{ feed.link }}</a>
+                    <a class="mr-2" href="{{ feed.link }}">{{ feed.link }}</a>
                 </div>
-                <h2><a class="article-title" href="#">{{ feed.title }}</a></h2>
+                <div id="title-section">
+                    {% if user.is_authenticated %}
+                        <div id="fav-section">
+                            {% if feed in favs %}
+                                <form action="{% url 'fav' feed.id %}" method="POST">
+                                    {% csrf_token %}
+                                    <button name="feed_id" value="{{ feed.id }}" type="submit" class="fas fa-heart fa-2x" style="float:right"></button>
+                                </form>
+                            {% else %}
+                                <form action="{% url 'fav' feed.id %}" method="POST">
+                                    {% csrf_token %}
+                                    <button name="feed_id" value="{{ feed.id }}" type="submit" class="far fa-heart fa-2x" style="float:right"></button>
+                                </form>
+                            {% endif %}
+                        </div>
+                    {% endif %}
+                    <h2><a class="article-title" href="#">{{ feed.title }}</a></h2>
+                </div>
+                
                 <p class="article-content">{{ feed.desc }}</p>
+
             </div>
         </article>
     {% endfor %}
