--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,6 +12,8 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'blog/main.css' %}">
 
+    <script src="https://kit.fontawesome.com/4030f8e5c4.js" crossorigin="anonymous"></script>
+
     {% if title %}
         <title>FeedMe - {{ title }}</title>
     {% else %}
