--- a/blog/templates/blog/favourites.html
+++ b/blog/templates/blog/favourites.html
@@ -1,45 +1,29 @@
-{% extends "blog/base.html" %}
+{% extends "blog/display_feed.html" %}
 {% load crispy_forms_tags %}
 
-{% block content %}
+{% block title %}Favourites Page{% endblock %}
 
-    <h1>Favourties Page</h1>
-
-    <div class="content-section">
-        <form method="POST">
-            {% csrf_token %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Add Feed to Favourites</legend>
-                {{ form|crispy }}
-            </fieldset>
-            <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Add</button>
-            </div>
-        </form>
-    </div>
-
-    {% for feed in feeds %}
-    <article class="media content-section">
-        <div class="media-body">
-            <div class="article-metadata">
-                <a class="mr-2" href="{{ feed.link }}">{{ feed.link }}</a>
-            </div>
-            <div id="title-section">
-                <div id="fav-section">
-                    <form action="{% url 'fav' feed.id %}" method="POST">
-                        {% csrf_token %}
-                        <button name="feed_id" value="{{ feed.id }}" type="submit" class="fas fa-heart fa-2x"
-                            style="float:right"></button>
-                    </form>
-                    
-                </div>
-                <h2><a class="article-title" href="#">{{ feed.title }}</a></h2>
-            </div>
-    
-            <p class="article-content">{{ feed.desc }}</p>
-    
+{% block additional %}
+<div class="content-section">
+    <form method="POST">
+        {% csrf_token %}
+        <fieldset class="form-group">
+            <legend class="border-bottom mb-4">Add Feed to Favourites</legend>
+            {{ form|crispy }}
+        </fieldset>
+        <div class="form-group">
+            <button class="btn btn-outline-info" type="submit">Add</button>
         </div>
-    </article>
-    {% endfor %}
+    </form>
+</div>
+{% endblock %}
 
+{% block favourite %}
+<div id="fav-section">
+    <form action="{% url 'fav' feed.id %}" method="POST">
+        {% csrf_token %}
+        <button name="feed_id" value="{{ feed.id }}" type="submit" class="fas fa-heart fa-2x"
+            style="float:right"></button>
+    </form>
+</div>
 {% endblock %}
