--- a/blog/templates/blog/feed.html
+++ b/blog/templates/blog/feed.html
@@ -13,7 +13,7 @@
         <div id="title-section">
             <h2>{{ article.title }}</h2>
         </div>
-        <p class="article-content">{{ article.desc }}</p>
+        <div class="article-content">{{ article.desc|safe }}</div>
     </div>
 </article>
 {% endfor %}
